[package]
name = "rduino-watch"
version = "0.1.0"
authors = ["lobotomizedDev <oskar.rochowiak@tutanota.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "rduino-watch"
test = false
bench = false

[dependencies]
panic-halt = "0.2.0"
ufmt = "0.2.0"
nb = "0.1.2"
embedded-hal = "0.2.3"
embedded-graphics = "0.8.1"
mipidsi = "0.7.1"
display-interface = "0.4.1"
display-interface-spi = "0.4.1"

[dependencies.arduino-hal]
git = "https://github.com/rahix/avr-hal"
rev = "190f2c3cb8d29e10f71119352b912369dc5a1fb7"
features = ["arduino-nano"]

# Configure the build for minimal size - AVRs have very little program memory
[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"
